infrastructure/servicemonitor-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showmetrics
  labels:
    app: showmetrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showmetrics
  template:
    metadata:
      labels:
        app: showmetrics
    spec:
      containers:
        - name: showmetrics
          image: proksch/showmetrics:latest
          ports:
            - name: metrics
              containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showmetrics
  labels:
    app: showmetrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showmetrics
  template:
    metadata:
      labels:
        app: showmetrics
    spec:
      containers:
        - name: showmetrics
          image: proksch/showmetrics:latest
          ports:
            - name: metrics
              containerPort: 8080
